--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,28 +16,36 @@
         tools:targetApi="31">
 
         <activity
-            android:name="com.sasaki.splittrip.activities.MainActivity"
+            android:name=".CostsActivity"
+            android:exported="false"
+            android:label="Adicionar Custo Extra"
+            android:parentActivityName=".TripDetailActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".TripDetailActivity"
+            android:exported="false"
+            android:label="Detalhes da Viagem"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".TripSetupActivity"
+            android:exported="false"
+            android:label="Configurar Novo Grupo"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_main">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity
-            android:name="com.sasaki.splittrip.activities.GroupActivity"
-            android:exported="true" android:label="@string/title_activity_group"
-            android:parentActivityName="com.sasaki.splittrip.activities.MainActivity">
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="splittrip"
-                    android:host="invite" />
-            </intent-filter>
-        </activity>
     </application>
 </manifest>
